--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,39 +1,39 @@
-#ENC[AES256_GCM,data:H3AOwxFH1/A9gBHpCDkS322EMXWTwR+4R5VQtFVe7EYeNk1joPAYoOobYWJgmzdVwLLQ1B3VLFh5LjUy2GlsuaE=,iv:OZvtEo6KyFAYSsTi7MaVrYquNTTNw73L5CvwyxEDvfA=,tag:ozhhndGLG2AudZQU8vHGBw==,type:comment]
-#ENC[AES256_GCM,data:byRV9QR23AOX2voOY8U3h7pWw3JDASYIANtNd7kzMNH2IowOfOE/1q9gBXI=,iv:O6ux61SzDwBNEIINWqrmK20H7eFefL9Gpy3y/6DGb9g=,tag:W+zGzI2G8o2SZ5/DyoE5Pg==,type:comment]
-VIP: ENC[AES256_GCM,data:mu1ZVf0MUn2BWPpDOA==,iv:+hMyd4+3tYW2tlR+K2g0FMB/Bm6bF7Qf2bFy82CNQWs=,tag:6DtQkul0F1CkwPDwTtDemg==,type:str]
-#ENC[AES256_GCM,data:Se6ga5n/HoOSvXDhVKhhx9zmYXTE41V03/qd,iv:7xq8NXIv9aMi1lmtFCMi6DxbwU6NCKG1TN7rLRFa5vU=,tag:A+G79PUmN2ZDd8fA0wjtyw==,type:comment]
-#ENC[AES256_GCM,data:q47wh/Wcm8BozBJUiYA+aykYAkjJnuqbMcz50bFqwxfRDA68ThPYFLL24PXJiKhz/wnmFT1ylyUn5YUf2DKdEfpS3Oyi1pX+ScJBVKonpHThHRi9x98y5GE=,iv:2dUQq+HWIV6fuZBQzpbYqZBLfii24sAUvV2YU7uLscE=,tag:PQwn/rOW+ATUYEi1Uw9GJw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:sJRhQendPm3nWywn8ac=,iv:8fHiJLUohsALaPmgSpLlCfn8VpMQBu/VsfMB+zDsuec=,tag:oWd2/+HCYTFaILtMyEJS1Q==,type:str]
-#ENC[AES256_GCM,data:Yx5JqKhRBILzv0txyjX2RKRBBYzuUjZF9xRcGhGTUluIlQ==,iv:wFVMO0A7jEfZcI9CM7WiKjwEhhLTH3344j9LoVFDU24=,tag:tf1sd/jcjBGdEoBhiI4CYA==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:V2+CkKV/tkQTC7aoBA==,iv:zb+lRYlwv2ApC6sYNgUjwbELaDMJ/E7lNwSrDJkyK6Q=,tag:cuuhkm/Hhn6nKqE5kSqbpw==,type:str]
-#ENC[AES256_GCM,data:oXivTcD5UhgaUmEcZuqnWQEUV6dlc9tBPtv5YAzeFLlnSb3c/tiXEho6FOBPEoc=,iv:ghcl4lxsr57vuJ+t8wp4LQt0U1iq9Lm39DkYuTYybo4=,tag:fpF7PO6sWGJZuWKLnQsIZA==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:zsyGn9MKz4qLWcVoiFt9ZwfNX026dzl4nysmZaxwWg==,iv:go4eyayb/+1DTqISlf0r4J6aco/z5heBR43nx+pQUR4=,tag:zKhUA1oAkO6r7osB3hausQ==,type:str]
-#ENC[AES256_GCM,data:efvyIHlqlP4hJzoNaDeiWyXYTdK6FAvxJL0UyFyFKnbrPSyh0I+QjPvYUdV6HdeptbASzYb942NrdP/DapKR648a1FXuK9ue40Yrs5dnsqYrKw==,iv:i5S8or8S8B9EhGrMbHi6uhN04RjSljJR08twLQcmVDA=,tag:ElNcQoFzwZXv8Qq7YX/MIA==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:mf20jFFez88+UbMmJnRT,iv:VrRx0/KtRnuciAnbHFgBvupLpp0UTQlvZM3d1C6Y58s=,tag:KbH5Y/t+qwvc8loXEidgcA==,type:str]
-#ENC[AES256_GCM,data:xOxIBRY39fQCHTwA23CsyWTbuHQ1VkEY+9+8boL+TPvQ,iv:LZqGl8ptUU9a9SlzZdz8hIjSlpxUsy++/n0viaVztSk=,tag:5RSUQqtqTb9ufymg4rVQxg==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:A2yEW38Yo+zqaRD4vjBM,iv:uebRl1jaaSyVfT+mA7jzHIBCzp36CgWofzSL14S5HNw=,tag:SpSwW2JqsGrQBo3gvE/MJA==,type:str]
-#ENC[AES256_GCM,data:1ytaMO6gZa34nDJrbLyn0GkBkneXAaJbVBaLCfb8h0stLLy7A/2rCLt9M483oixxX63RJRfcG+jk4fbQm7UoPKkdPqhdKqJCzeqRiQx4yYU=,iv:Fj+mvnBlKfjOcZbwEYspK4m0LTnliTo0qA/dBLv6A24=,tag:I02s4ehc7VgZ7gyzvb28Zw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:IP5qsXsuN5zrrCtXiH95,iv:Y0jqQMHSMAV0rTVpl93usvuDgsx8Vc5lc7kvPLngZUQ=,tag:UnrF/sx+Ia+5Lz9eikcT0A==,type:str]
-#ENC[AES256_GCM,data:0rmEeMEJ+VQcWgXlw4BPuxJ8PpLz8/D3Cq8v8Bp1L8RGwWSynIcZ9SfFzMwM2bAkQ2ak+xLUNrgvyCifV7O9rB/JvoGmR6q06WW0+UnZhO+8U8GpTnnA,iv:GpIEC0NGLa0fHZpq+lEEl7KVTK+OmtcAY9zsEFt8Ypo=,tag:B4SiG6GWIHMXH8+5fk3jYg==,type:comment]
-#ENC[AES256_GCM,data:vWLnrjsc7uh9pBuxk6cldY4hWno6FU9n1hrb8/IfVZrgmmdVxedRlsdnwwo+nVO/Rk70c5OOlHT53He3/QV0+bNnVlWQQ84TLYWWq81/XQZ0KCVYXuh7V3CqKBxuDCl/CQVBEI8sy0z97XB6P0FCm1mwPLKyv4nK+TjohQ==,iv:p4tgA2a5hSaC4lGugcEdDKq2xy2vplncgX0hl0wWuoA=,tag:4sM2778tqelD0MiaP2afbQ==,type:comment]
-#ENC[AES256_GCM,data:EEPsnYP/cc+1fCDHxK99XEeNdCsYY26IclbbWtq33AWSLIyXw8L1LmeWHeYwhLqYsBeNqV0pqwPKysKTk5VwNkCJRpfoyf/AfWVg7QQWrhU=,iv:dff4WVZvmYnhLNdaGyUoV9kXsVwJn45A3ZPgd/SOIb4=,tag:UBKApX4aqglu3vWpez2+jg==,type:comment]
-#ENC[AES256_GCM,data:/gJC2m6yQ+JRMYGYwmW4K0FxCwT8COrt++2LZpSK15i33DtV3hqdGaGeRxB0+ZmzMOVbqGUb,iv:wl6MEvbW5CH3rQ8J0DuSRFtAQ3LhBXumfqJo8K6tqu4=,tag:dbhZhoyfvAVLh+a2v5wMcA==,type:comment]
-DDNS_URL: ENC[AES256_GCM,data:cNITD2pzKCeCDYE3XRc=,iv:GCprcogpJxcmfX0aPT5meRH2EpljP3vWMomsFn65Qus=,tag:ACus0NWFVBDQkYKHgrDNJA==,type:str]
-DOMAIN_0: ENC[AES256_GCM,data:jX8OJssK+82EfJ27,iv:OYNSeMdcI+5Cqdf4iEMUUdNJoj5NJDOgcxVd91EhqUc=,tag:rU2upOqiW8F2CfvpYsX/oA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:BlbEOgfHR0JMawiU2CJ1kMI=,iv:iwLr0lXFLCoto7NM4fgHMQ/lmwi6rHQQhkKE2JLCKaM=,tag:NoeGRdH/YJAoWwuM1xpm9g==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:z9ziXrvc1jMOMOSpyBnjJ+UO2FntcAPfu2dyw7ekSBzRgonnvLPeXg==,iv:YLjzUUFFes1zIWFYlHkibdAHDvBBFzMGaDnw3EG77xs=,tag:pTEe32myxJQIWkYWZ7SN8A==,type:str]
-DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:bQ02feC0/vON7wZ95kNoYOk/WVM9+WhKVBRF/fi4ZUw5Qxkb6A==,iv:GKQELmxuC/5Re5+EJdLdDdSQV2Mol0hlPb231WCA4UE=,tag:w69+mjjRs53vrjYcomSuNg==,type:str]
-#ENC[AES256_GCM,data:nMDEFwNDMyRkV93XBZx/CtAwxbtOyFStYe4mQIWei41sx9pTGlBISVBsqcatKyDkrD6rjhSM328=,iv:+HcZWrVw5/sGT04vMeWTS/wSbEovpjlvBWz/VgbS/0E=,tag:UTKqc9lVN0PnCozYq+6y7A==,type:comment]
-#ENC[AES256_GCM,data:yWkFF8pO0/m4n5Nrbn023hsiUnNeFsfWOQ==,iv:PpIHJ64lueg+U34xiajAJtN0AbyewEiN/MtBJVnrpmU=,tag:ZXeXgqI02T0t9UsLqQb11w==,type:comment]
-#ENC[AES256_GCM,data:yLAEB54w7rTDNCDSy8bjSBx58kqtuksc/AQMoEGKgZLdGuxYbybnoL8DWa5J5zQwQqxoL3UyTbghzjw63y/Xwlr37IiRWoRuJ0VngZY=,iv:IfCOgu1WLbMOdPKSsBaYfGV0twGTOlJeSZpdi1QR/wE=,tag:KBGHgYMScUHIReWbKlCtVQ==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:yS36IluXpi5THm6xLPhr5ZLNL9iH4Rn5dnrc65ix4/QX0wiut0GPGnCD0Udo/004,iv:pW+Gaw7u6cRCALuwqlu9Vra6XofTuavp4PjX4sFYLRs=,tag:+cYRb46Yq2Mz4HVRIt7XuQ==,type:str]
-#ENC[AES256_GCM,data:kc73BLL5ZY41czrnQ3k5h1wK+X+/nq+NOc1EASLYIKDVngspZ9crH5O364p4D8boh9k46aS+gaT9akVxV8DBRDtSxuMO/VU=,iv:7RmSWLgNJ4c1zX7DrcLCfNTJodFdhX68qZ55+aYDW44=,tag:f1+2Z+t/IMrC5LTUM42wYw==,type:comment]
-#ENC[AES256_GCM,data:z0Kwi3rFuOZYHq4nllMUmNa0acbLAS1RMu5z5YSucEF/rzkt/Ke73/dP573stT6drfSgf+nV,iv:a3XmsEsjovjDL5WIMIg8TuvpXuiWK1FPtlZrG+aIobc=,tag:JwwCUJ/ucCNtKa3hs7uu9Q==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:jPzFJ5ltog==,iv:OcnttEHqvmutf58m0pcO1s+c3ORPMvcj5RBOQcShtYU=,tag:lmpvnaVAA+mlWJBsOjjmVA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:BNGNk7bndN9+0zc++Dv4p9BHyw4=,iv:fVCpKONUxRStv9MAXY/fYbstZYnGXwTl5+lXXnSd09E=,tag:HNCgAJMIhFCq8rGCvqEZIw==,type:str]
-#ENC[AES256_GCM,data:UeiVvxWLcHQp361+ehc=,iv:hI1gUDIB+bhF76wzbli9CkRpCb03bkb1VYiohIKlr8Y=,tag:Hpig4Amm3QissiioLXFU+w==,type:comment]
-PODNET: ENC[AES256_GCM,data:0HGtj/M6QvxLjrEUPQ==,iv:uPb6NJ4MEVduNW+2yjF0JWGk5L2l7z9YHnKeB84DpQQ=,tag:jWgRbQAReE1ah+EGCrmIpQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:YYdX/HjBGVG3RWtjng==,iv:IpiNNu+/kLTXwoC+GLU0Bnfljgdiw8+ngkQsSbHo0xA=,tag:EroHGzZN6e+vxGSWjdFfaQ==,type:str]
+#ENC[AES256_GCM,data:ot6JPSyongZ4G8CBbDdq3eHNmaz0hlqnnYp8sadq1juZVDMQqdrsREE6RO11CmZOAzieXoUfIMT0RyKZFZQyb9w=,iv:N4kIzL1aAoYtuKSV+IC7G306s4+0b57ADKzPmWoY0yU=,tag:H7Chh+/m4mSTBPyksHPVsw==,type:comment]
+#ENC[AES256_GCM,data:g2hSmHnulRjs2utRSSoASPvhibp4FDKrmS+MepfIMQMhPT0IMEjziunBD5k=,iv:HHhRUMG4fGalgInFCSSHTLtm94t7+RVvJSUUpE1hl6E=,tag:v5HjnuOJOshLT0JhlvO2ug==,type:comment]
+VIP: ENC[AES256_GCM,data:v+WpfeWaxC7WxCs98w==,iv:M6QMozCylP2nlBalVmZoo30/HutsBv/UEfs+Z5UDOCc=,tag:kdcukq3xEBC/+T5q/FgcYA==,type:str]
+#ENC[AES256_GCM,data:ziDx1JU71BSqiuci18A8r6WXUOu6UhxtkaC3,iv:ErrUZFmIFbzC6tetmKAWjJdBP2Jt1GVX0ud5BccALCg=,tag:SC+fnUA49UqIfsKj4O/MsQ==,type:comment]
+#ENC[AES256_GCM,data:0+gIv5cWVVV37gikhg7Hgp1nS0qZPR8Czo0VtAVsEcr/OpJZzVLT5KTArCNNIreG3pHncwEb/z1tMPpX0a/OIQQkwxSI6gJTEKNzc8bdtJ8TAGHi5KsIDVs=,iv:wP9jjPrpIBUZvDAwRW8dZONmtaiIsFX5RIdStOtIPhM=,tag:J0bK7q7pkKxkacONcdhQyg==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:BgTfU4UMqJcBpbievII=,iv:byPuwrU2nH54tvEfsEZhzl2YV1Trn1FIx76T1nmnzeM=,tag:0XPdDf1+/jNf6bufVvknTA==,type:str]
+#ENC[AES256_GCM,data:6VhTriru7DU7EmayQf1V7u040WkKGamsFhCRmdgjGMId/A==,iv:j+taKE/hy23xlSXu4BVBJCLyoGl06KGEYGnwJVodzr8=,tag:MseQtqAccltrW9pHJIGkBQ==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:jOqHprZNrmi5uGOk4g==,iv:ZQsMvybBHIXwf2W/rrzd3UvP/fbaNmrngJgv/mTU2KE=,tag:hTKjyzD4USDsEDqPWlJrrQ==,type:str]
+#ENC[AES256_GCM,data:KErTW/u0oKR3HGIMFfBgsfd/oEkQiER8xQ4DEaXVpbo7jRiF4SOl92whDHqcejY=,iv:1stnq2GDgdvnySIAjiP3hbd1/ZHBWNAZfeJa08DAE78=,tag:rj+GMDTUFEE+6g31KLB5Iw==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:13R1kyqGX58fsr217jehZYWzcrHLQPPB207NYLZuIQ==,iv:aVJ1rx4bA7ifFVqjI0zqDKlrdlDhHhefEJzt7YYmA38=,tag:jB80DxWlKGHpmByRsQHmiQ==,type:str]
+#ENC[AES256_GCM,data:rY5jbL6Urv6NpvZcrHrD3yUALNjdfaXlMEs+IOnhhUovzFbFi6Ku8KWt8ZbdgWGaNS+r+13I19gacDzqvGMQIX9QWLBOLFqQrdBC2I1aFmvZjg==,iv:mx3SqRAUgJ5y5zR7S1xXI5UQp8j44GHerFdo3rH4OY0=,tag:REedNuDVZyfoo700dcIESg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:pDfiMP3ewEGTMwU0z5In,iv:2W8uTLIgh5OwjowE1+u8ctg2rYXd1SoQ56foEFKal+8=,tag:FEvFE9HRAZNm+/g8fRp3cA==,type:str]
+#ENC[AES256_GCM,data:sHNowyDIvdHdGId3XRiXdyyCVJzuAblqj6s3smihI/sd,iv:axK6kaNwlYRmpeDFDHqE78eP4EaB4UX+pbTIG/KEC5s=,tag:c8U0F+vM5j4gMHN1hyWfTQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:yVBCzgd/Fx4t5gBeB81X,iv:s1FlkIuQGZKv3AISSoFLyT59BpU719bt5U9qdyFcDxw=,tag:yuPtkJFywvmSRvF38/edVQ==,type:str]
+#ENC[AES256_GCM,data:SG0J21MPjvpvYi2cKIPtuEzlL6NN5I3IALfnyPXgBIXSYmmORLXbBHxALTvi81Nib6c35rQp5GYMfAmZUA2Z2r6XWYQ7nbetXuU18HNLxTY=,iv:mzZZYyZ2AeOeTLL1z+ioo37HEWMCU5kK3BRGu3qjV2I=,tag:JGoyPlzjPHOz2dHIuj9MSQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:x55dMmJclimLbZEYDxNY,iv:M1GoZ90Mt6dnm8cRdpcLDy/ui+qXTDHdVGbInayctmg=,tag:8/MxsEjwmYUXsdXcUY/kOA==,type:str]
+#ENC[AES256_GCM,data:MfKgiguNiQdzSmGFANCEiWN+QzozyquKQFrUMWlx4vTp8sNAhKtIXmcD+a2K4vjvF81HWscHy9YvA9Rmqhzpl55D/DF8CbnGepnEGJfkMgbr6pa6duTi,iv:tP3tiGiX52CDuHsVgQZETF53nkLijTgFKON12UCvlN8=,tag:osSkVZigBV2d+552K52y8Q==,type:comment]
+#ENC[AES256_GCM,data:82Ea1to3tVB1WYjlF7lbRg5Kea148+ydxgCx28TcAnuQvo66ZDKzJDlsFT423vSXvubNXAGDsCJSN/GqIAJq/UgXUFQsO/aRKPICjD4YBSNHlp0TTqhiQmh8/Ty5WOOumnGJJ1sngaWtQrum4VdS3C9Vmw+hSjyACCdxSQ==,iv:aRSjzRVi6ZNGxLo7PI1Z6xYvlTZsRKPfu0/Ls3wmt4M=,tag:pDJZnHStdwaW4fVVDSWtMw==,type:comment]
+#ENC[AES256_GCM,data:sY+76Jec/dhqYyy9cYK58Y2sUQewUQS7vBhkaIHKEW11YTjsdw6n5i0P11LFcZa8SxALsiNzLRQ4mxkZHzDUPW5aBa60+GYwtslLGVosRjA=,iv:SDZTabeYl6j0t5fZf7+QBwMfz0WnUUkl6tM57dRxrqA=,tag:dpFxuCxPPCOk7vm1DKwYXA==,type:comment]
+#ENC[AES256_GCM,data:MPw8+cMbnLzlwCX2EVM9p317tfNfn+cVKxYD8kevhv7SOeYDYc+45g8LvxMecBhKt3jD25Wm,iv:64SmKQ7E8pUO7fnp5rozAG63fsrxXLcgHqp/m/ziHLs=,tag:+3mLjDt/1S95Zhn3lA0alw==,type:comment]
+DDNS_URL: ENC[AES256_GCM,data:3AP7hj8OVffW0lfwuxM=,iv:Ourc1nT3beiH5Wn1j01SKfA0Bx3e1m6Tl+TEkVQ8WC8=,tag:OUTNJvZhSzVNX2kQTnnZiw==,type:str]
+DOMAIN_0: ENC[AES256_GCM,data:SdJObVrpV6KANnEJ,iv:aY6UkdNeOnzZXybfgwA/hiZ9igoN3KonPUyPAArG2bo=,tag:9s0hiWGVN4IP6ASyahPmCA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:t14CbhpEPcNiYb1jOxOhVYQ=,iv:1/63yZ1W3srqV+GLGUaq/t2yfBErLdaH8ZkiWaVHjAM=,tag:gRRSn0sASsftVcTXeX36Aw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:rrtuJXqmMMt+egaT5hYj6V6XsmuTXICFKkggpqpje3AhyPCc4xlowg==,iv:UP8k4G40NdRz8OTb1zv7Fsz9xeXXTfkMDI0kmjKnvRA=,tag:uu0s3dy8qK+XokDQCAYoVg==,type:str]
+DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:DzMTgpQ4tYjEpewNbf4eUMnxYWxTTiDubmpmtSDDSMH2D/0huA==,iv:qTG9dpinYI+2t4LIFe0ljsaR1FxgrPotaKDfsYnQM/w=,tag:A84goguIpbWn06hFBnFMCw==,type:str]
+#ENC[AES256_GCM,data:rumjW+em3FTLEXNTvmZDajlhK56avJPttsYOIB+M/x9wmDuJCPosZgq3j4tXaM5fVB+mH1H7Tqo=,iv:rcN6qamA/IZnt+oiCH9eCWrY3bBL21ZEU6WXT6iwqMU=,tag:vb1sFslES3uIV+QZimYYDA==,type:comment]
+#ENC[AES256_GCM,data:GHv0BY+WXbHHUy+Z0bN2AwkdDhIxb6201g==,iv:sJWs+y3468NhV8AsBQ27H9tSd+4t8mYg8Weuhx/EDMg=,tag:k5dRSgdKw5BaZzWFoWdH+Q==,type:comment]
+#ENC[AES256_GCM,data:40q+S3j52NeTuMzCAV/kTo8HeyUz+vG6j2qMwtL4TLeeKwoQyeQcwJyT3e8g6TYpt62xxNOSdLZ6k4R1GmpWQjDyNJEmwI4+91pidYw=,iv:E5+IiNTlmF1GflZ8gbqTvnhh+wo2GIGjOvWr/ip2aoc=,tag:JIUo7zr0R0NHAP9MyKI3cw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:N6Gvz5nZ9639WFwaLrPqo5qduGA2Xanw6aH4a6/x7EhYvgA8LLCWhcZwiyM2zRjO,iv:WQtSb+mdOuPxJ7qodhfBqwRuAo8r1OUuXRchaTC+2yg=,tag:ocewYu1GptVfBUODRrECHw==,type:str]
+#ENC[AES256_GCM,data:KNH8IeJoccd+yeM2B58rRbgv7v+L2cxy5CtRC80ecONutyzhDkF4ZTDrS1QBajBtXIHwqS8FMWU1QULq2ZrgI9w6B4EEWhE=,iv:/m5ApBV20oOOo9fnNQvZPmsW5XV2cqfYk3WaYa7gZeQ=,tag:IzZUNHWlLW8zJQkmm2Mf3Q==,type:comment]
+#ENC[AES256_GCM,data:TadMjCszaUn8sfOMnrL1QxHf53il9D7P7n/6T2gSy/LWM/qT8befr7ttKbWK7EcQmwXO6bHh,iv:qWk+44odx7YSETd58AaYk1e87Me4Bdfd0aJVwi7fDwY=,tag:iNyUetsEQIvtQQm3TBC9rQ==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:+yoQ9ewLKQ==,iv:LahuMo1B2ymOSiLueUr8WgeB+PgLYduUqHkSJsKuwVI=,tag:has/NfZWMPy1FA6pE4yCJQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:tGrdXYEIqO2nBLsgRdsF3bXvzZA=,iv:ZgTuXMmwwocXl6Gso1TE6gXWgjnrJo1opZUhZ72egwc=,tag:AdQzmFD9STq9MwhpB55J6w==,type:str]
+#ENC[AES256_GCM,data:bE2d46AiDRzlnKH1NQQ=,iv:frwcvpSnLVlnM8XVlOsiB1pagmzoek8Dhf0tpjobFlM=,tag:4N2OM8Korelfnk+1Rhht4Q==,type:comment]
+PODNET: ENC[AES256_GCM,data:4g42kTp2xcrvu6J2pg==,iv:8ZaiOhynsY9nUn4gphJ0k1nZ7Qj+4KM4nwOGY37msoM=,tag:vTFjzymCKSp8N7087jAcKw==,type:str]
+SVCNET: ENC[AES256_GCM,data:HKU4EsksheX/F1MyCw==,iv:hiOgnL3GmQTRki1hbqwlyQeXMUvo+VPAOwj3vcb2FK4=,tag:MSY4bttyp8S7GDmj7c3IRw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -44,13 +44,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjSzRzdWVLTUgrdGtRU1BF
-            TUdLVitNTWNyWEIrQUFlengwZzNMVDFkaG5VCmRmVFZaYjlDWjRNVDdMd0IzYU1u
-            Y21SR3UyRXk0U1ZTanV3UThTMkNKVTQKLS0tIHRzMi9vN1VZaGhRVHpzaUJGS3lp
-            ZkdzRFVOZHh1T2UxQlp1YzNJSEJpbWsKsfwDPiW7sBIn87DSxW6OvHIXCJEW9i8R
-            PjJhKiqo+alVg0ylOcsCqaFMdvLO02U8Nvksm+x+z2njs1v6ECy59Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkeFpEV1E3MzE3K29UNXV1
+            dHVDMDF1a3luU3Fyb1dacVF6TFZ5RDhDZlNRCk4yNFZHTm5udWRJa3c5YWdnTEVo
+            SFpJUFhhUFN0SG54WWx4cFpoWUFxOEkKLS0tIHVkbTlwUzU4ZzBQM3pJVVhYblJq
+            dVVldDdncm8wbTU3cE9ZYll0QTd0VlUKTzEs1B1IuBs3SMuq+XhxDQVSYCtkfXHg
+            t3QMz9BgddEikDBpFIuNCtx/FqLPnys5yjuWj461Wbftrzvszhs+HA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-29T22:32:34Z"
-    mac: ENC[AES256_GCM,data:woYfBYPPNiTIj8rfX9pESD2B2P+ytoFvmxQlklzp2PSiZHRL+ez7GBGgHNcdrTY9l2JIkkNEHJwwvCtiUDQDEIIpaGp294qP62YUlAH1veOLTQSbfrQl2HTcRT7hEtD7DaI8zcyA5TdoV87UDvO43KqveM4/2HvsYijW4AcAnts=,iv:7BgvQKw/C66lU5ObLXzssQFFsaFNPRdbrw6tH0uJqWk=,tag:0UYFdmAK0BxXfhll56lz7w==,type:str]
+    lastmodified: "2024-12-30T23:02:32Z"
+    mac: ENC[AES256_GCM,data:pnYiAByPiR+y1vbWB5n+M3mxg1eaCn+qcQYEsJXIdLyUq0y8Gq9JbHkJ6nwSghb83RqD+/2Jg+3ASqKBYR6mqCBTg0BW+AQWkK/74o9N4XNeqWoDlRqOFjgeXYf2n/FnHacTVeA3bCh2o0ED0w4dnTGb1dmGZ28GuZ0lPa14OHE=,iv:zUiuk3M2FLwXTS18izkfgdzo0jvnXnb2nVxdH+ex3e8=,tag:vCK2d5QXlrnOE5Q/x9pd1Q==,type:str]
     pgp: []
     version: 3.9.1
