--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,43 +4,43 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:ER57HZmyHZICSumKkoLaLE8fnntVBdTXq/p8oFMw/63GatP8NWZQg/v0dVZxL758CXUYQqG4uD3ICI7mokjufjs=,iv:p+c+PyMse+dAsJoiK+1/ILJNUB++o62k30oQ3zCwauc=,tag:MTWXOA6S6SASl9AKfmKryQ==,type:comment]
-    #ENC[AES256_GCM,data:ElUD/KLi7V4+negye7yAnHxhvxyNm07RklKtHJ6gQD0A/GfQZA1ehHub+So=,iv:yXTMmn3uMymGp9uksAeB8XmFEJtuKIZTiLw/YWRUVLU=,tag:hm7ai2v/dTLUYgRFVBN+ow==,type:comment]
-    VIP: ENC[AES256_GCM,data:RRz/8USjzUdagqRACA==,iv:VW+8EFy6NZLUT1DxmfAPDWkv1s+z2oJElAE4f/D4HYU=,tag:J5tJDIxMLsYG/AOUPilfNg==,type:str]
-    #ENC[AES256_GCM,data:JYfzrMVyCU2xqbEFBeG0R583tXqXrBr96or6,iv:sCDGrs8ElJhvb4yzWgh4nhtNmkwf8pStjx6crO4UNb4=,tag:B5qdi5x3hhWC/SJMuj/5tQ==,type:comment]
-    #ENC[AES256_GCM,data:f0/wLbAehLQCSDusW2OqNDnyqfx05u5Lb6cVel9MIptH5KjfmpwVRBYP5WaQgNxBZQLa6l+r0jDftCAPa8tZ1ZZP9xxlCsgehcF+IGsEsJ7HiLDQBh9/i2c=,iv:HmrjqOUQwi2YQFGZMaPZ0BYoaLF64KZC5qwmqV3tmiE=,tag:icBVVaAVhEHf2hQKAZvfVA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:fEeS8p/XuKeJoMrptWU=,iv:v3Fq+D4Ws2drD6lvdp+4RMAxdXdepFh0sXPaGabchNM=,tag:sHHJ85L5GrDAnnBPy8Xbhw==,type:str]
-    #ENC[AES256_GCM,data:AiV81aAKQMy6OjDkcQQNXemTAVFVZWqZMLfzTnryzqGSvQ==,iv:IYjEkfcorIX49O0rH8yMPSKB/laSSod29BySNI3Wg2g=,tag:loCu1fRgG1J2NQnCUzvzRg==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:hNj1aHri1wjbdgjBIw==,iv:FikUrGjcx1yN6NClQrhGpxe+RFQthcFZHySQn/OIbVM=,tag:iN3ZPNwhU/glOcfFDfcKRg==,type:str]
-    #ENC[AES256_GCM,data:kg0SFsVamROLCqQcY34719JLXKyRFQ6mvOT/F+/acxY1WhfcQfLcw6uNuGv492Y=,iv:F7yxhnDn+bgfix0kxcDFkiQBZY1jwZDAallmDXTb82w=,tag:rdpvH3pRYGcR77NfxwIyOw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:rgd4xmF6SUZu0qN3JracnQM/b/hc6DmN+eDgz9ROzQ==,iv:r2Tl6fD84u8TjKpiJgw0xndMktOYo3Ykyn9R5So2z7U=,tag:i/8jm9T9nvCT2C3aFjDOuA==,type:str]
-    #ENC[AES256_GCM,data:ciYx4Zf9XJqQSbX8uvsKtgRYa4NyQYSNsklOvkPLKm9DcSnaVCm7mxUymhELY4Af9MU0l40hEloPZKuxBLijbLbirIdwAfWW7AB8471tE/IVlw==,iv:FNA0lugoP+KR5/rqZwZh2haDh8fuVUZYyzJYs/A2/nI=,tag:Vlp2whulQoEQcaickl+6IQ==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:qRhZy/cGHi0JRX8qkFwL,iv:hrH61KROmtbAY1AF3NaJ4f6maZu1Va+EY4IMGpBUYoE=,tag:1jjW+w6qM+sbnuFUYlVCYg==,type:str]
-    #ENC[AES256_GCM,data:YVjTtkIJNsHOHhOqJnayfJ30wnWg6JMbDELrpYm2hEnq,iv:OjEM+TH7PRX/MkaFGenJTioZxGJkbRa3blP99byVZJc=,tag:ejtiEFbpS9X2FvRAsKNNpw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:xS7e237ylbqGBpcHthYj,iv:tki/CAstWMy/UEH6JkM69AcSNM+MplnbJ4Km6Ypyu+g=,tag:lCOnCmY50a7bdFjAtdXCmg==,type:str]
-    #ENC[AES256_GCM,data:6bYv1NzYsnAFTYUlggVPrln7MfHTRUU5RW6Wd2UwviFlV4Lp/faHO8/lBHlgqOMN4yMtx9959bQgG8+80dqrL4k0t7xb4rmJApQ7973DrnU=,iv:p/7il7x00yCmUtVpHMwow8nLZlKszuVuMjKK1uN9tAE=,tag:9iij8C42Bpdlti+oVjWcZw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:5OgX53rqOnOL9Xtr6YCG,iv:PR76N6CbRdL9VPJTV7kJE3O9OWbMvZEhpGS5j0VKyiM=,tag:lhS6+7EukoyYaBNisuGZ4A==,type:str]
-    #ENC[AES256_GCM,data:wkEE7HDNzzHwgS3CrPLTkJg9znNxhb+nGq1waEXV4iwG8GhtSzdmtAYcvuxOwRiAk0ape5eGCcBF9ifqALdubKEIfAB1lghqjetW9Mt0tADie4G7Za8c,iv:GQk+Bs/wA8SKF0R3WW0JA2jynJ0ZjHreBJgW08pScTo=,tag:PdbKFDYQxysuOqXRnH4D+w==,type:comment]
-    #ENC[AES256_GCM,data:wG6A1M8RhZGdaxD9Pdpm1/vxtveMceLd62U71tOEgvmC4HRSGcTFLg7MRdzLmusEE76SRK/V2tPscNicmmw9msaqk3NI6qzIsO7+xZHAQl+a6ciEcHMXkAmbZGReS9sz3aKWvWwG5Ss/jZCStXmA6IC5XgwcBIqgvTySEQ==,iv:nWslti72A5rG5wvOFkJK2AxhBtgjM18AY+CZJQhJnu0=,tag:JEYMTu5yjxlz34iHoplR+g==,type:comment]
-    #ENC[AES256_GCM,data:jRxsEysTW422LhP3lNeP6P3P/4ZnyoDl+SwugD5M3SnNpsUn02kZ24Hz7GsPj3GpxLlgP0PJ0fPY+TQiS6eFhXUFWENQgkicUboRm7qU8UY=,iv:RBsdflWhHGzqeE644ocJtDhglOxouNO7y665qnE9nmk=,tag:o5AVFRfeFTiZmA9hizxwuQ==,type:comment]
-    #ENC[AES256_GCM,data:1zkcKBANWO17L0i3NOqgNzJO5/h7fzgAe1M2jF1GQi9SYU8TaQ7m1fdYROeBO3/OrVgmpp6H,iv:P3mn3Z8jDzRzuLhM0l6EfCqSv0BE8GjF9DX8kL5mWOg=,tag:Vs/OGo7yYFg6r0Q++EJd8g==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:48SqJ+YnYyYQ2GMRta4=,iv:GlkOPHQY7SBorxMAsrlemHBGrE3o0qVoRsmJ4QbC7JY=,tag:oHAulJHxJsnAgIs1QcZcwA==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:ueVmyZHa5HubNF2B,iv:10yWgDTHbsj29LPb+tKhOMEGQw6SAk+cFohOt1GqEUU=,tag:+JDwZhIRUDc7exfpIDnABg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:AwycQBlUGVPhqkCw9AQcwIg=,iv:FW1Bg65Tq5K+XRwIOyiPBIQgpzKICmN0Zh0VZcatwwo=,tag:Al4ao5yNE1aLiU2YMSoaZA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:ckr8EFNnGfzwaGEtuMzKPWkKmi6vBQgTKpweiYx6GBUDphmPC0WI8w==,iv:pYD59FLB36hkWykFhhlQH8vWEUUxodw0snjM8yQzT4Q=,tag:m3uzjOhLSu6hGClp11OHng==,type:str]
-    DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:NckHQvFaQUvkRrcz2oeHDrUwxZKfNlvpGg3T3/AlgUjLETIyKA==,iv:M5IaRsOGG5l/FmEPlFsOXOZzjZcyh9Ipv65GBmXCQGE=,tag:OSDWvJ4/iJPFwYW6Jz2DSg==,type:str]
-    #ENC[AES256_GCM,data:xTll3QOpu534ciVd6S8ru+xLZ03VRALgM8L18lXKGnwne67GqUAeH4G4ZfrkwGNKeFUjt7+5CO4=,iv:Gl3vS91NIa4oIcJr4+RDSp3Blmdb2uemAC6bR65geUY=,tag:kY2llI/pR/P5k61QFvMb5Q==,type:comment]
-    #ENC[AES256_GCM,data:UgFEXCXg62ph9Y/rddvx37p5MhizA+Lg+A==,iv:w4jx5+LtcTMoeKPqUWg9DGmZpLwJktiTDA1DFQDgR2Y=,tag:AuMraSclJmdlr2Lx3HIdAA==,type:comment]
-    #ENC[AES256_GCM,data:kgHw4oax8JMmr52in9XXKloUB0SWDfO2MECH8uAoCAHuAkT+ZPSPurHYqQXgnYheQUksmBg5qjo+3+hyVSvqobrDUoWYsb+flEuMfTA=,iv:DguVjPErcVpaxm4Ww53X+BFVqfdzjEjK0wHNJYS8rRI=,tag:U0Pciq06SjwjHE91kZMiqA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:+j7/7S+vJ4xeVGq7MDKfIOfyhhT8HQRF2UjQKp5f7Yp6yt8D9cx3k2+uFYDbcyKz,iv:7v3C66MeUjdXzdP/gj7s+gPMMget2tzuuhqZgyV4WFo=,tag:W18xFafgXzRBNwR5Efeoqw==,type:str]
-    #ENC[AES256_GCM,data:UXl2M37n8U18ZUQgQ8oDbc5g3EQCTdNE+EKKnuo2eJkwnDmZQNdiGOW4f+8bsEil7WkEG2gKTTRh/W9Iv0uoscdTVdQt054=,iv:17FuswyqwN60i08GdwNLFp5y7GkiZDfWQ/p3tfyZRd4=,tag:ZLkv0DZpjwSOuylqCXlsnQ==,type:comment]
-    #ENC[AES256_GCM,data:YaFhdvXt7pBbH6tZOCmiK4YDY9KG3ofsPzpDKx6NrQBHGDe7B6XBtw9Xp7lVXEGYZinO2GMc,iv:5AcAd+gP8vdFVwlj/5zmPGz9eBOayV1fBafTxY3Ajkw=,tag:9sFiVgUEcSTvW1znR49MgQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:NQ/7F92Hww==,iv:icS8dqfBj3SXw2qEXJ0gjqUVH/dtCy7vvU9J4+vGuiA=,tag:VRepmocfukoGbAZsdLQWQw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:GX0q0DU8a8boP0+4wwGTrr7pslc=,iv:gOKj7YToCNEKAU5lHKpwMHIWnlgUUEYJOoPzLfHN/nY=,tag:QE6+PODArzeD+P2K6bZOcA==,type:str]
-    #ENC[AES256_GCM,data:cxMaIqeNOM1XGDn3iO0=,iv:21w0F7MorjyJNG0RxvEzzMKzjH5J5yotXYemqd7FGsA=,tag:E9r4SH7ZbCTjKXsGqN0qNg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:mfs3BbViX2brJLYsqg==,iv:w+kg7Ks+PovgzPq5r3mL1CrD5yyHLDpcRoGuDgBBxlE=,tag:od7IdeFfwcbkYVfza8it3A==,type:str]
-    SVCNET: ENC[AES256_GCM,data:BD9nArI7BsZ86zi8yQ==,iv:0O/neStYWbkghHWm5/xCE/Wbs6Tvw57Bd9PWUSKv/oQ=,tag:d1+2UXu3IhbCOaAEprLBtw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:pfofgQ==,iv:EqsRCARjgW5wOjuQ+n/+ptJrxdvHSrs9wUgwJHuAOo0=,tag:UhhFdXRoHIv40LKf3f9MRQ==,type:str]
+    #ENC[AES256_GCM,data:6G8PVuUIiVLeNkjwiI5dBce7SjUFNFONAoGH6Vuw5083taj9f6cvbC28FzZkKGfkXGLPsEslPKNmBLHwNdeqlJQ=,iv:BSbWisRr6XLXIWkJ8Aq1XJsArsjSX9TWrVxyNo7RjBU=,tag:6j7/0GOwll/NjOsQqhMOVQ==,type:comment]
+    #ENC[AES256_GCM,data:WaeYU1xoL8b991KVAaeDzgo2wO+KJ6/q67GDSJa3nbxwnvikulqKbUzpZkU=,iv:d/RjF6JldY4mbG4N7u19QRjDzXPv5m+ID0PXP4iENoE=,tag:li1BSXgCqSWiBFhVHnHAAA==,type:comment]
+    VIP: ENC[AES256_GCM,data:P6B/Eg4YFOk7BfXvaw==,iv:38SxJW+w/N7zmPy3jI9Lao5vj21BRM3tKHcshHix1QI=,tag:Z8aRZhPUdgsJrg+TiYVmyw==,type:str]
+    #ENC[AES256_GCM,data:1GNtSfiLypVn/EKbsa33O/gkV4NS42BTg53V,iv:38UYNw9qJTGtLBwTxxCFTMYqUH50vPvfeIK7NPJQ6ho=,tag:lOT47U0mhhiQyArtlQLQNg==,type:comment]
+    #ENC[AES256_GCM,data:T6R7DqrPAckWPo0s4Mmce4BXl7n4otXD+oeYkukwQPU4jg3dnVaA4DmBuY4zAm6rlWuMQW2YCOnZMwDURAYUICpePN8dfpxxIjna0+n5agkKXuVfI6rRrUU=,iv:LFOQpdoCk6tp/eSG5h3nh3FFp7ko5Rt4ojpAHmra5Sw=,tag:K6GOc9xRt+aM6I1m6dqvXA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:+Va87GH9rA+bFKB7zT4=,iv:PHybxEkE/U394+2Oxt0Jsr0wWxIeSVuGdvFpWXkC/Rs=,tag:8gakNeqXglakcoEBpBia8g==,type:str]
+    #ENC[AES256_GCM,data:LhkB0uYDg3YZFXz2yE4ahI+el5E2hyyNGFbuQ8YwJz8r1w==,iv:nFNAOGa095337BJOrcij2wxkItiX0x4bg0wqbViEFtY=,tag:jwjfYwoKcYxvZa2ekyhUew==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:SgVLwVzME9toA1P2+g==,iv:ZzOdG+C1XzSnk6ybRXEuKIxlHViz6NY8/C9vNs001Is=,tag:2EtSpj4eGPQdKaRiVVPYFw==,type:str]
+    #ENC[AES256_GCM,data:IS7tNfY3lF9ux0Y5pizQIJfpEGgJsjg7TCxk2z4V/tsp1cb5ZLmfU0PyrK6ASu4=,iv:iNa3A0LGzHQO7u0KjSIjzQ6Z62e0ZP9Tgh2L7kVnPgs=,tag:T7rP7ss+ksrUsOxPfbkceg==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:QftVHwW8/Chjssiwg68Na48FpOXqZIoZP3Y9CkxnNA==,iv:zLKj7+LuTX040m6rI1hSt1+JvJEMj8wch/H+91M+jpg=,tag:QbDt8VRjdMCWyECMxBvZ5w==,type:str]
+    #ENC[AES256_GCM,data:K+4sOfv9BJPq14pwwgPg9p43S6ixu64NpfHqiL7T58cQdha4iEwDaHbB6yvoXStpjxnalo1LOc4SdzP8ENMSp2IUVz69vofkGhf3AzR6X1f2Sg==,iv:qEHGnU2CrzOGMve/lGfJJ+hmc9Ln1Iybgthd2n79iU8=,tag:bmJonK04Xtt/gG3bVPe16A==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:esdIRYrpFouSXdf9Fvju,iv:Jhkdrmunyy6atxC/ZkUWTfojyjvw/GgYFwKkqhEEw/k=,tag:eR66n0WvmYB2B/jqTFFIPg==,type:str]
+    #ENC[AES256_GCM,data:AM8HQ9YNQ7rUe3UXxjfEpaTMPWD1ma3ql4ysTAT1J/PI,iv:vFrli94dOtOBdRsjBDyhS3yyg0BW2zy+nDIwxfQbB4k=,tag:S8tRbntLSM/Ub1rR6n0cIg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:5886DRqeMBnsoOp0KDD0,iv:+2TfU8c/HZm+n1J5jG92XnomQq+u6y7cevQvxlp5Fbg=,tag:j+FOulzqgF8zVzNDV/PMDA==,type:str]
+    #ENC[AES256_GCM,data:nU7BlYrEAaNXm9K3O2lnWssM5QJO1U5geICy4iGCbWu7hFfTTyWm+ATyZPJjXrGVkPtPXihMaO9jUSl5Dwzy8rGs9wNeUWyy0ql2QDbNK2U=,iv:1Qzu0LoWpeQ1WKPRBxK9wMRt16yfTvXcglvA4pKLWx8=,tag:mwSzbAq/aQKifkhG934LMw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:blJ3UzUQ5lu9uRUEoeCf,iv:s1VoW78WPJIYLKxCFad6qW3S+kRtTD2WZdwv8Z0PxBg=,tag:jgHCP/HGWSIkvbnjxxSzvw==,type:str]
+    #ENC[AES256_GCM,data:l2SdeBRfksG8qF8IZ1qQmaCKQEaWYkSZ+1jiOK3ZJkTpAvgzC5GgJRmkSrKV1KrUIRU1+blUYDfQcGA99PbQIimmZ5nZSJPGiTY3THatjnAMAYy7yTAb,iv:sria2aageQu3pylTdXA9+mp+CXrOFm4pNnBxBIoh03Q=,tag:el3ONqDpStT9B8WfnEeBkA==,type:comment]
+    #ENC[AES256_GCM,data:y4KXB0BXf0Zv+iXoR5wyHJlkG49eKkWOWbSOiooKeKijgWNGZghzmctIeaoGqV2o2iP+pk0SMifsyuo360clVLdhcIzJH3Aiv89Pfpud9z/N+c8n2OrtErnk2xcXj5HLokNk4kzMjIOU7otmXs3W1++UaEkjzlimVMu/kQ==,iv:HO6no5pdglHkp6IxFpHJCb0x4sV4pQnebBq1E8Svc2w=,tag:ePj5t+/IR/qj9IVmZ3uoKg==,type:comment]
+    #ENC[AES256_GCM,data:bG7SqIqaQYsEtdnfHcpmboAdCajD15pFdzObah0DlA4Fj7JQn566Ql5cMNNqXLwrtdjID0Y0sfDOvnXABpVzjfbhri4XkQgFbLXKee4sxp8=,iv:jLCMU6rPwTjvbttjA9S+g/NN8sRMtBAO2eB0rp8EidA=,tag:rrEhJpnYcR7d6PDryMcm3g==,type:comment]
+    #ENC[AES256_GCM,data:xnOhCKiwuWqHY/8xjbEj9FM+Sf320izf44XzSjt2WNSgv29ApD5R8mvZWHA4HfhQF7GBFanV,iv:LCDu4wbgDgedoh+iX2Pmyprbwf0zKb1u4bqJmwHJXUY=,tag:/7ZayWKRvosgpGE2QJFD9Q==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:/0Er+x2YYAC7q0j1Gss=,iv:d/Debq1quxPjh7m/AAIbHDiYtRs3hsIWTM6hOWkdgfg=,tag:GiLQ4mvKE/lpefHVBVnNUw==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:d0bBd39jn41AfG0M,iv:BRE7pvk6A5kVA6p2TCle9pBT+QrKQ3/uAu6TnmjaI+c=,tag:UiRfGt8n0MFK7jaIlFkAVw==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Fdo8TfBaX8a2TvV8iAkIKkM=,iv:cHnu6wDY/HjN+87mWgyEi+u5LGM5VlhTi9fAB3TGlsc=,tag:kgAiBRWtscxqiFtPTH10fw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:aPf5zy4/PPvs/4rCK8vkSON58x+KIMymLNFWrGiJDElBWcjV7Ni+kA==,iv:fNVfkMDWpO46jVTQaQoL/VZA4nILklZzE85iTke0nHQ=,tag:61exOssf32v4bnfSYKsFbg==,type:str]
+    DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:87GFDDS8uq9rNPxggQxe/9pAbOuT7fFbGGxDNiqgKO+c9y1DMQ==,iv:oYKyYfdGZ0CrNAst8XO4sLurL8LEGEPcHELQQE23ghM=,tag:ZjVG1iKWMc9rA7UUzQxLBg==,type:str]
+    #ENC[AES256_GCM,data:v6Lfor6veivskAodyBvkiJb3UlilPreTWrsM/Q2LZ8Z4mQ/pDpdaQURO0OK3GevSBz1GDBW3eag=,iv:DDxOF2FHWEU/B3Bj/scV9TL2jqQ8MR9lIG8uge5qF9c=,tag:A/3wxLvrT8WCQrUiBTsqgw==,type:comment]
+    #ENC[AES256_GCM,data:azNDJD5OJBOsCm9kF1DO7BbkcAAdSnwdqQ==,iv:v5iB1jUlIgMfNVqPhYll4bFdcEEaigjKQEQEKe0a2Uo=,tag:UENBYeBFeo6/kw35o9O8Hw==,type:comment]
+    #ENC[AES256_GCM,data:46O+ishUsl9IkKqIqn79vaqUJ5gIxgZp6JR7ywwlVCixs4twbY4zZgOkTjfa6kaMxUipU1ucJWHEH14jIHaK23DXu+EE7OSNB2NoFSM=,iv:KDSk+MElGArujhzIinR0qmZKlfSOSoMtoDJqxfwNDeo=,tag:+XYti20Yx3mgLxvK3JZbvw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:aEEjrWqmqCQJWU9F7yPFUssJrZth/FSp4crx2C0FatKUEwntVpU4BmHysYDOWeSR,iv:yf4bzefkCm5/ALx8KxDR5SFmMAhhfq1/u01ByYmntGM=,tag:Djkl1qOQTMvZ8KjYDTz2Lw==,type:str]
+    #ENC[AES256_GCM,data:EVp5orbS5cQLj/0F9GD1nqVwEaXBNE+ZfwjAhW+JX+mXpHoHJVo+fVo1CWgCOqY5zrT7iE2SzYvjoi3SXGx6tZXkZKZVJf8=,iv:3UlFaiOR5Ul8s10xPulytJ0qWbwEUOKjIuVR3iinD/k=,tag:hlR8b3twEx3r1+/78WCGtA==,type:comment]
+    #ENC[AES256_GCM,data:VVD8ii17YhRbbU6zcXuMZhxEgDIYlAqFDBZ9W/qdLpnf1tP6AmCHXWGp0sR+lrSEkIeu1swX,iv:JvIv+YltnrXDIdJk5nPbDCQDiR3la4plLz3nDm5c1QU=,tag:AiggwccmPILlSN0vzSrUyA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:0tRp5odhwg==,iv:57YLHF3eHETOHgPuncZUa7R548Xf5VW1SGsxH2+vDPs=,tag:5iUQSo/7wpAFC9tDd17pVg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:1TQu0j5x3/S4xV2IVyKSib50//M=,iv:TmyyxRA3rCtBtMwfH0InGWCz2HiDHQ0AXG+pdeuM2Ak=,tag:QulsW4Jw+spBAJfm/gDyZA==,type:str]
+    #ENC[AES256_GCM,data:/C+yT88iu0TZsCqCblQ=,iv:s+N9nqpcfjQWN82wxxHWu9FdceJQs29HlpgvriqbNSs=,tag:mE7Hl5qzbEVSL2lNCH8zLw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:ZWPdWEG5zfSFVm+Qfw==,iv:YQTye0z/JokpqUI2JOCS0VlK4m5pApgiXWJCDzrCGD0=,tag:iGmGbClcV13U03rk17Qfkw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:+XzZgBdM5F6zkk1ylQ==,iv:B+HJaVc8bPioep9CFQatqgMDgvxckt69cPWdYuSNyzk=,tag:V6kyPryGI3MlZjGlSfH04g==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:GUAeeg==,iv:GQnd5QVHOUnKlFCKVCe01S76Z27A6OVJLd0QqEQ18vE=,tag:ae2ztxuotRcwPIJgiBLJVQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -51,14 +51,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArVDJBWGl1QTNybWEvV1ZY
-            cFFUdkZiVGVVeDEwRGxMM1RPTmI1N2g2N0dJCkpaQXNjNHJJUGIvcnRtSW5oTzQx
-            NmZkaFNhNUp3UkJPM3NabW14Sjc2MWsKLS0tIFZrdSswQ3ovRmtkc1BqZEQvakxE
-            OEViRGFhcVgwcUZRVjJnSjVBQ2lIaEkKTi7JnbAI7nnnXYHVMyX0BlmNDDCauC2A
-            Zzw8IrTFqr6LIQaWX4N1+EQ/6lcjy0/ErpreUwP1sT+qtKElpfgHOg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArYmFxZUlLektiQytYZFJY
+            aXVER2xOY3NxK0lUdkJUTW1sUHVXSGZQOFJrCnE5bS9iVDg4UEZONkpBM1NML0Vj
+            bFZGdENwMGtGSU9STXgzSlQrbHZPdUEKLS0tIHB0LzVRUW1pN0svYmtneEFFVllw
+            dmV5UWZyK0dCTmd0SmRzY0YxUENKY28KR+TXY4Lk5luS7shmHL6A6nmNww0nidED
+            DzeVRH/SaB0eNWJH4BtRbcB4Xdsv7e4v6mbu+inE+OBw3c3+YyFOzg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-29T22:32:33Z"
-    mac: ENC[AES256_GCM,data:ylds15xTp/gQ0U10FQQuZXEZyYJgVXGaF2u2WUNBw12+fPQlANRmfsyDNiR3YsrYGYcmtSPWz3Y4ZJmOMFYX2YIu494fgsgjl19OCoVsP8u771jdYPzdVNQFuYtDz5vOS5wSgGQtXmN46JcuWYhRO52cDVtUXCbzKhmMSaBfA0w=,iv:X3GlOFyT3AkjE+cuCcicU0QvJb8x/howEd0W5HRV4cY=,tag:PxHl5SPi09LVSdYKzH3Dug==,type:str]
+    lastmodified: "2024-12-30T23:02:32Z"
+    mac: ENC[AES256_GCM,data:sPghhhT0PREV08S0Rp2pnIHHbIOPG0icSiU95fScs7ZqMX49xFCCzJ/ygfqxUxZtngql0coGKybDYRTALOdcIxQb4V2z4cFIgl5pyhLd6RZynXAWkRpxcMz8u8lKNBfhqySD1YymntP9t63vv0jr1L+TJJlVEzYmHA1ZP6DP0LQ=,iv:sNCi1Qqa/Zv9JocvMNl1JMGyNmH89fEHqElpl7z2/Es=,tag:DcnuQ9biV8gbmywupIGbhg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
